# Tarsonis-Compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  output.ll
src/: CMakeLists.txt  main.cpp
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
src/analyzer/strategies/: check-return-types.hpp  check-types.hpp  check-undeclared-symbols.hpp  remove-unreachable.hpp  remove-unused.hpp  type-check.hpp
src/generator/: CMakeLists.txt  generator.cpp  generator.hpp
src/lexer/: CMakeLists.txt  lexer-controller.cpp  lexer-controller.hpp  lexer.cpp  lexer.hpp  main.cpp  sequence-breaker.hpp  token-lib.cpp  token.cpp  token.hpp
src/parser/: AST-node.cpp  AST-node.hpp  CMakeLists.txt  body.hpp  declaration.hpp  expression.hpp  grammar-units.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  print.hpp  return.hpp  routine.hpp  statement.hpp  std-function.hpp  tree.cpp  tree.hpp
src/parser/tree/: node.cpp  node.hpp  tree.cpp  tree.hpp
src/parser/utils/declarations/: AST-node.hpp  abstract_declaration.cpp  category.hpp  declaration.cpp  declaration.hpp  expression.hpp  grammar-units.hpp  span.cpp  statement.hpp  type.hpp
src/parser/visitor/: abstract-visitor.hpp  complete-visitor.hpp  print-visitor.hpp
tests/: CMakeLists.txt  aplusb.tr  arithmetics.tr  arrays.tr  complex_statement.tr  defer.tr  for.tr  if_else.tr  raii.tr  record.tr  routine_calls.tr  types.tr  while.tr
tests/examples/: aplusb.tr  arithmetics.tr  arrays.tr  combined.tr  complex_statement.tr  for.tr  if_else.tr  raii.tr  record.tr  return.tr  routine_calls.tr  types.tr  while.tr
tests/lexer/: CMakeLists.txt  test-sequence-breaker.cpp
